# ticktick-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: ticktick-openapi.md
docs/superpowers/plans/: 2026-05-31-retry-with-backoff.md
docs/superpowers/specs/: 2026-05-31-retry-with-backoff-design.md
memory/: MEMORY.md  debate_2026-05-31_retry_scoping.md  feature_request_triage_edit_subcommand.md  project_predecessor_todolist_optimizer.md
src/ticktick_cli/: __main__.py  auth.py  candidates.py  cli.py  config.py  dates.py  recent.py  store.py  sync.py  tags.py  ticktick.py
tests/: test_auth.py  test_candidates.py  test_cli_commands.py  test_cli_secrets.py  test_config.py  test_dates.py  test_recent.py  test_reminders.py  test_store.py  test_sync.py  test_tags.py  test_ticktick.py
tests/fixtures/: ticktick_cassette.json
