[project]
name = "ticktick-cli"
version = "0.1.0"
description = "TickTick Open API CLI. Thin wrapper around the API; the AI work lives in the user's workspace agent."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "ruamel.yaml>=0.18",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.100",
  "pytest-cov>=5.0",
  "pytest-httpx>=0.36.2",
]

[project.scripts]
ticktick-cli = "ticktick_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/ticktick_cli"]
